src/org/libtoil/core/ToilStatementParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g 2011-04-17 11:36:07

  package org.libtoil.core;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class ToilStatementParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AT", "OPENP", "SEMI", "CLOSEP", "OPENC", "CLOSEC", "EOL", "WS", "COLON", "EQUALS", "DOLLAR", "ID", "DOT", "QUOTED", "HASH", "COMMENT"
    };
    public static final int EOF=-1;
    public static final int AT=4;
    public static final int OPENP=5;
    public static final int SEMI=6;
    public static final int CLOSEP=7;
    public static final int OPENC=8;
    public static final int CLOSEC=9;
    public static final int EOL=10;
    public static final int WS=11;
    public static final int COLON=12;
    public static final int EQUALS=13;
    public static final int DOLLAR=14;
    public static final int ID=15;
    public static final int DOT=16;
    public static final int QUOTED=17;
    public static final int HASH=18;
    public static final int COMMENT=19;

    // delegates
    // delegators


        public ToilStatementParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ToilStatementParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return ToilStatementParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g"; }



    // $ANTLR start "statement"
    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:15:1: statement : ( variable | control | declarations );
    public final void statement() throws RecognitionException {
        try {
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:16:5: ( variable | control | declarations )
            int alt1=3;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==AT) ) {
                switch ( input.LA(2) ) {
                case DOLLAR:
                    {
                    alt1=2;
                    }
                    break;
                case SEMI:
                    {
                    alt1=3;
                    }
                    break;
                case ID:
                case DOT:
                    {
                    alt1=1;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 1, input);

                    throw nvae;
                }

            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:16:7: variable
                    {
                    pushFollow(FOLLOW_variable_in_statement42);
                    variable();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:16:18: control
                    {
                    pushFollow(FOLLOW_control_in_statement46);
                    control();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:16:28: declarations
                    {
                    pushFollow(FOLLOW_declarations_in_statement50);
                    declarations();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "statement"


    // $ANTLR start "variable"
    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:24:1: variable : AT var_name ( OPENP ( ( SEMI )* ( inline_option ) )* ( SEMI )* CLOSEP )? AT ;
    public final void variable() throws RecognitionException {
        try {
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:25:3: ( AT var_name ( OPENP ( ( SEMI )* ( inline_option ) )* ( SEMI )* CLOSEP )? AT )
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:25:5: AT var_name ( OPENP ( ( SEMI )* ( inline_option ) )* ( SEMI )* CLOSEP )? AT
            {
            match(input,AT,FOLLOW_AT_in_variable71); 
            pushFollow(FOLLOW_var_name_in_variable73);
            var_name();

            state._fsp--;

            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:25:17: ( OPENP ( ( SEMI )* ( inline_option ) )* ( SEMI )* CLOSEP )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==OPENP) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:25:18: OPENP ( ( SEMI )* ( inline_option ) )* ( SEMI )* CLOSEP
                    {
                    match(input,OPENP,FOLLOW_OPENP_in_variable76); 
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:25:24: ( ( SEMI )* ( inline_option ) )*
                    loop3:
                    do {
                        int alt3=2;
                        alt3 = dfa3.predict(input);
                        switch (alt3) {
                    	case 1 :
                    	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:25:25: ( SEMI )* ( inline_option )
                    	    {
                    	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:25:25: ( SEMI )*
                    	    loop2:
                    	    do {
                    	        int alt2=2;
                    	        int LA2_0 = input.LA(1);

                    	        if ( (LA2_0==SEMI) ) {
                    	            alt2=1;
                    	        }


                    	        switch (alt2) {
                    	    	case 1 :
                    	    	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:25:25: SEMI
                    	    	    {
                    	    	    match(input,SEMI,FOLLOW_SEMI_in_variable79); 

                    	    	    }
                    	    	    break;

                    	    	default :
                    	    	    break loop2;
                    	        }
                    	    } while (true);

                    	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:25:31: ( inline_option )
                    	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:25:32: inline_option
                    	    {
                    	    pushFollow(FOLLOW_inline_option_in_variable83);
                    	    inline_option();

                    	    state._fsp--;


                    	    }


                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);

                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:25:49: ( SEMI )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==SEMI) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:25:49: SEMI
                    	    {
                    	    match(input,SEMI,FOLLOW_SEMI_in_variable88); 

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);

                    match(input,CLOSEP,FOLLOW_CLOSEP_in_variable91); 

                    }
                    break;

            }

            match(input,AT,FOLLOW_AT_in_variable95); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "variable"


    // $ANTLR start "declarations"
    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:28:1: declarations : AT SEMI ( inline_declarations | ( ( OPENC )+ header_declarations ( CLOSEC )+ ) ) AT ;
    public final void declarations() throws RecognitionException {
        try {
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:29:3: ( AT SEMI ( inline_declarations | ( ( OPENC )+ header_declarations ( CLOSEC )+ ) ) AT )
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:29:5: AT SEMI ( inline_declarations | ( ( OPENC )+ header_declarations ( CLOSEC )+ ) ) AT
            {
            match(input,AT,FOLLOW_AT_in_declarations110); 
            match(input,SEMI,FOLLOW_SEMI_in_declarations112); 
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:29:13: ( inline_declarations | ( ( OPENC )+ header_declarations ( CLOSEC )+ ) )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==AT||(LA8_0>=SEMI && LA8_0<=CLOSEP)||LA8_0==ID) ) {
                alt8=1;
            }
            else if ( (LA8_0==OPENC) ) {
                alt8=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }
            switch (alt8) {
                case 1 :
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:29:14: inline_declarations
                    {
                    pushFollow(FOLLOW_inline_declarations_in_declarations115);
                    inline_declarations();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:29:36: ( ( OPENC )+ header_declarations ( CLOSEC )+ )
                    {
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:29:36: ( ( OPENC )+ header_declarations ( CLOSEC )+ )
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:29:38: ( OPENC )+ header_declarations ( CLOSEC )+
                    {
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:29:38: ( OPENC )+
                    int cnt6=0;
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==OPENC) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:29:38: OPENC
                    	    {
                    	    match(input,OPENC,FOLLOW_OPENC_in_declarations121); 

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt6 >= 1 ) break loop6;
                                EarlyExitException eee =
                                    new EarlyExitException(6, input);
                                throw eee;
                        }
                        cnt6++;
                    } while (true);

                    pushFollow(FOLLOW_header_declarations_in_declarations124);
                    header_declarations();

                    state._fsp--;

                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:29:65: ( CLOSEC )+
                    int cnt7=0;
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==CLOSEC) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:29:65: CLOSEC
                    	    {
                    	    match(input,CLOSEC,FOLLOW_CLOSEC_in_declarations126); 

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt7 >= 1 ) break loop7;
                                EarlyExitException eee =
                                    new EarlyExitException(7, input);
                                throw eee;
                        }
                        cnt7++;
                    } while (true);


                    }


                    }
                    break;

            }

            match(input,AT,FOLLOW_AT_in_declarations132); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "declarations"


    // $ANTLR start "header_declarations"
    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:32:1: header_declarations : ( ( SEMI | EOL | WS )* ( header_variable | header_option ) )* ( SEMI | EOL | WS )* ;
    public final void header_declarations() throws RecognitionException {
        try {
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:33:3: ( ( ( SEMI | EOL | WS )* ( header_variable | header_option ) )* ( SEMI | EOL | WS )* )
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:33:5: ( ( SEMI | EOL | WS )* ( header_variable | header_option ) )* ( SEMI | EOL | WS )*
            {
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:33:5: ( ( SEMI | EOL | WS )* ( header_variable | header_option ) )*
            loop11:
            do {
                int alt11=2;
                alt11 = dfa11.predict(input);
                switch (alt11) {
            	case 1 :
            	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:33:6: ( SEMI | EOL | WS )* ( header_variable | header_option )
            	    {
            	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:33:6: ( SEMI | EOL | WS )*
            	    loop9:
            	    do {
            	        int alt9=2;
            	        int LA9_0 = input.LA(1);

            	        if ( (LA9_0==SEMI||(LA9_0>=EOL && LA9_0<=WS)) ) {
            	            alt9=1;
            	        }


            	        switch (alt9) {
            	    	case 1 :
            	    	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:
            	    	    {
            	    	    if ( input.LA(1)==SEMI||(input.LA(1)>=EOL && input.LA(1)<=WS) ) {
            	    	        input.consume();
            	    	        state.errorRecovery=false;
            	    	    }
            	    	    else {
            	    	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	    	        throw mse;
            	    	    }


            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop9;
            	        }
            	    } while (true);

            	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:33:25: ( header_variable | header_option )
            	    int alt10=2;
            	    int LA10_0 = input.LA(1);

            	    if ( (LA10_0==ID) ) {
            	        switch ( input.LA(2) ) {
            	        case WS:
            	            {
            	            int LA10_2 = input.LA(3);

            	            if ( ((LA10_2>=WS && LA10_2<=COLON)||(LA10_2>=ID && LA10_2<=DOT)) ) {
            	                alt10=1;
            	            }
            	            else if ( (LA10_2==EQUALS) ) {
            	                alt10=2;
            	            }
            	            else {
            	                NoViableAltException nvae =
            	                    new NoViableAltException("", 10, 2, input);

            	                throw nvae;
            	            }
            	            }
            	            break;
            	        case COLON:
            	            {
            	            alt10=1;
            	            }
            	            break;
            	        case EQUALS:
            	            {
            	            alt10=2;
            	            }
            	            break;
            	        default:
            	            NoViableAltException nvae =
            	                new NoViableAltException("", 10, 1, input);

            	            throw nvae;
            	        }

            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 10, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt10) {
            	        case 1 :
            	            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:33:26: header_variable
            	            {
            	            pushFollow(FOLLOW_header_variable_in_header_declarations160);
            	            header_variable();

            	            state._fsp--;


            	            }
            	            break;
            	        case 2 :
            	            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:33:44: header_option
            	            {
            	            pushFollow(FOLLOW_header_option_in_header_declarations164);
            	            header_option();

            	            state._fsp--;


            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);

            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:33:61: ( SEMI | EOL | WS )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==SEMI||(LA12_0>=EOL && LA12_0<=WS)) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:
            	    {
            	    if ( input.LA(1)==SEMI||(input.LA(1)>=EOL && input.LA(1)<=WS) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "header_declarations"


    // $ANTLR start "header_variable"
    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:36:1: header_variable : var_type ( COLON | WS )+ var_name ( ( EOL | WS )* OPENP header_declarations CLOSEP )? ;
    public final void header_variable() throws RecognitionException {
        try {
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:37:3: ( var_type ( COLON | WS )+ var_name ( ( EOL | WS )* OPENP header_declarations CLOSEP )? )
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:37:5: var_type ( COLON | WS )+ var_name ( ( EOL | WS )* OPENP header_declarations CLOSEP )?
            {
            pushFollow(FOLLOW_var_type_in_header_variable193);
            var_type();

            state._fsp--;

            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:37:14: ( COLON | WS )+
            int cnt13=0;
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( ((LA13_0>=WS && LA13_0<=COLON)) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:
            	    {
            	    if ( (input.LA(1)>=WS && input.LA(1)<=COLON) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt13 >= 1 ) break loop13;
                        EarlyExitException eee =
                            new EarlyExitException(13, input);
                        throw eee;
                }
                cnt13++;
            } while (true);

            pushFollow(FOLLOW_var_name_in_header_variable204);
            var_name();

            state._fsp--;

            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:37:37: ( ( EOL | WS )* OPENP header_declarations CLOSEP )?
            int alt15=2;
            alt15 = dfa15.predict(input);
            switch (alt15) {
                case 1 :
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:37:39: ( EOL | WS )* OPENP header_declarations CLOSEP
                    {
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:37:39: ( EOL | WS )*
                    loop14:
                    do {
                        int alt14=2;
                        int LA14_0 = input.LA(1);

                        if ( ((LA14_0>=EOL && LA14_0<=WS)) ) {
                            alt14=1;
                        }


                        switch (alt14) {
                    	case 1 :
                    	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:
                    	    {
                    	    if ( (input.LA(1)>=EOL && input.LA(1)<=WS) ) {
                    	        input.consume();
                    	        state.errorRecovery=false;
                    	    }
                    	    else {
                    	        MismatchedSetException mse = new MismatchedSetException(null,input);
                    	        throw mse;
                    	    }


                    	    }
                    	    break;

                    	default :
                    	    break loop14;
                        }
                    } while (true);

                    match(input,OPENP,FOLLOW_OPENP_in_header_variable217); 
                    pushFollow(FOLLOW_header_declarations_in_header_variable219);
                    header_declarations();

                    state._fsp--;

                    match(input,CLOSEP,FOLLOW_CLOSEP_in_header_variable221); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "header_variable"


    // $ANTLR start "header_option"
    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:40:1: header_option : option_name ( WS )? EQUALS ( WS )? option_value ;
    public final void header_option() throws RecognitionException {
        try {
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:41:3: ( option_name ( WS )? EQUALS ( WS )? option_value )
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:41:5: option_name ( WS )? EQUALS ( WS )? option_value
            {
            pushFollow(FOLLOW_option_name_in_header_option236);
            option_name();

            state._fsp--;

            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:41:17: ( WS )?
            int alt16=2;
            int LA16_0 = input.LA(1);

            if ( (LA16_0==WS) ) {
                alt16=1;
            }
            switch (alt16) {
                case 1 :
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:41:17: WS
                    {
                    match(input,WS,FOLLOW_WS_in_header_option238); 

                    }
                    break;

            }

            match(input,EQUALS,FOLLOW_EQUALS_in_header_option241); 
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:41:28: ( WS )?
            int alt17=2;
            int LA17_0 = input.LA(1);

            if ( (LA17_0==WS) ) {
                alt17=1;
            }
            switch (alt17) {
                case 1 :
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:41:28: WS
                    {
                    match(input,WS,FOLLOW_WS_in_header_option243); 

                    }
                    break;

            }

            pushFollow(FOLLOW_option_value_in_header_option246);
            option_value();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "header_option"


    // $ANTLR start "inline_declarations"
    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:44:1: inline_declarations : ( ( SEMI )* ( inline_variable | inline_option ) )* ( SEMI )* ;
    public final void inline_declarations() throws RecognitionException {
        try {
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:45:3: ( ( ( SEMI )* ( inline_variable | inline_option ) )* ( SEMI )* )
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:45:5: ( ( SEMI )* ( inline_variable | inline_option ) )* ( SEMI )*
            {
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:45:5: ( ( SEMI )* ( inline_variable | inline_option ) )*
            loop20:
            do {
                int alt20=2;
                alt20 = dfa20.predict(input);
                switch (alt20) {
            	case 1 :
            	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:45:6: ( SEMI )* ( inline_variable | inline_option )
            	    {
            	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:45:6: ( SEMI )*
            	    loop18:
            	    do {
            	        int alt18=2;
            	        int LA18_0 = input.LA(1);

            	        if ( (LA18_0==SEMI) ) {
            	            alt18=1;
            	        }


            	        switch (alt18) {
            	    	case 1 :
            	    	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:45:6: SEMI
            	    	    {
            	    	    match(input,SEMI,FOLLOW_SEMI_in_inline_declarations260); 

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop18;
            	        }
            	    } while (true);

            	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:45:12: ( inline_variable | inline_option )
            	    int alt19=2;
            	    int LA19_0 = input.LA(1);

            	    if ( (LA19_0==ID) ) {
            	        int LA19_1 = input.LA(2);

            	        if ( (LA19_1==COLON) ) {
            	            alt19=1;
            	        }
            	        else if ( (LA19_1==EQUALS) ) {
            	            alt19=2;
            	        }
            	        else {
            	            NoViableAltException nvae =
            	                new NoViableAltException("", 19, 1, input);

            	            throw nvae;
            	        }
            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 19, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt19) {
            	        case 1 :
            	            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:45:13: inline_variable
            	            {
            	            pushFollow(FOLLOW_inline_variable_in_inline_declarations264);
            	            inline_variable();

            	            state._fsp--;


            	            }
            	            break;
            	        case 2 :
            	            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:45:31: inline_option
            	            {
            	            pushFollow(FOLLOW_inline_option_in_inline_declarations268);
            	            inline_option();

            	            state._fsp--;


            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop20;
                }
            } while (true);

            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:45:48: ( SEMI )*
            loop21:
            do {
                int alt21=2;
                int LA21_0 = input.LA(1);

                if ( (LA21_0==SEMI) ) {
                    alt21=1;
                }


                switch (alt21) {
            	case 1 :
            	    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:45:48: SEMI
            	    {
            	    match(input,SEMI,FOLLOW_SEMI_in_inline_declarations273); 

            	    }
            	    break;

            	default :
            	    break loop21;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "inline_declarations"


    // $ANTLR start "inline_variable"
    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:48:1: inline_variable : var_type COLON var_name ( OPENP inline_declarations CLOSEP )? ;
    public final void inline_variable() throws RecognitionException {
        try {
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:49:3: ( var_type COLON var_name ( OPENP inline_declarations CLOSEP )? )
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:49:5: var_type COLON var_name ( OPENP inline_declarations CLOSEP )?
            {
            pushFollow(FOLLOW_var_type_in_inline_variable287);
            var_type();

            state._fsp--;

            match(input,COLON,FOLLOW_COLON_in_inline_variable289); 
            pushFollow(FOLLOW_var_name_in_inline_variable291);
            var_name();

            state._fsp--;

            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:49:29: ( OPENP inline_declarations CLOSEP )?
            int alt22=2;
            int LA22_0 = input.LA(1);

            if ( (LA22_0==OPENP) ) {
                alt22=1;
            }
            switch (alt22) {
                case 1 :
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:49:30: OPENP inline_declarations CLOSEP
                    {
                    match(input,OPENP,FOLLOW_OPENP_in_inline_variable294); 
                    pushFollow(FOLLOW_inline_declarations_in_inline_variable296);
                    inline_declarations();

                    state._fsp--;

                    match(input,CLOSEP,FOLLOW_CLOSEP_in_inline_variable298); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "inline_variable"


    // $ANTLR start "inline_option"
    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:52:1: inline_option : option_name EQUALS option_value ;
    public final void inline_option() throws RecognitionException {
        try {
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:53:3: ( option_name EQUALS option_value )
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:53:5: option_name EQUALS option_value
            {
            pushFollow(FOLLOW_option_name_in_inline_option313);
            option_name();

            state._fsp--;

            match(input,EQUALS,FOLLOW_EQUALS_in_inline_option315); 
            pushFollow(FOLLOW_option_value_in_inline_option317);
            option_value();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "inline_option"


    // $ANTLR start "control"
    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:56:1: control : AT DOLLAR control_id ( COLON var_name )? ( OPENP ( ( SEMI )* ( inline_option ) )* ( SEMI )* CLOSEP )? AT ;
    public final void control() throws RecognitionException {
        try {
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:57:3: ( AT DOLLAR control_id ( COLON var_name )? ( OPENP ( ( SEMI )* ( inline_option ) )* ( SEMI )* CLOSEP )? AT )
            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:57:5: AT DOLLAR control_id ( COLON var_name )? ( OPENP ( ( SEMI )* ( inline_option ) )* ( SEMI )* CLOSEP )? AT
            {
            match(input,AT,FOLLOW_AT_in_control331); 
            match(input,DOLLAR,FOLLOW_DOLLAR_in_control333); 
            pushFollow(FOLLOW_control_id_in_control335);
            control_id();

            state._fsp--;

            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:57:26: ( COLON var_name )?
            int alt23=2;
            int LA23_0 = input.LA(1);

            if ( (LA23_0==COLON) ) {
                alt23=1;
            }
            switch (alt23) {
                case 1 :
                    // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:57:27: COLON var_name
                    {
                    match(input,COLON,FOLLOW_COLON_in_control338); 
                    pushFollow(FOLLOW_var_name_in_control340);
                    var_name();

                    state._fsp--;


                    }
                    break;

            }

            // /Users/fox/workspace/libtoil/src/org/libtoil/core/ToilStatement.g:57:44: ( OPENP ( ( SEMI )* ( inline_option ) )* ( SEMI )* CLOSEP )?
            int alt27=2;
            int LA27_0 = input.LA(1);
